--- a/assets/css/aggregator.css
+++ b/assets/css/aggregator.css
@@ -1,58 +1,58 @@
-.ssp-aggregator {
+.spfs-aggregator {
   text-align: center;
 }
 
-.ssp-aggregator-title {
+.spfs-aggregator-title {
   font-size: 25px;
   font-weight: 700;
   margin: 30px 0;
 }
 
-.ssp-aggregator-post-list {
+.spfs-aggregator-post-list {
   list-style: none;
   margin: 0;
 }
 
-.ssp-aggregator-post-permalink {
+.spfs-aggregator-post-permalink {
   color:inherit;
   font-weight: inherit;
 }
 
-.ssp-aggregator img {
+.spfs-aggregator img {
   margin: 0 auto 15px auto;
 }
 
-.ssp-aggregator-post-title {
+.spfs-aggregator-post-title {
   font-weight: 700;
 }
 
-.ssp-aggregator-post-date:before {
+.spfs-aggregator-post-date:before {
   content: "\f133";
   display: inline;
   font-family: 'FontAwesome';
   margin-right: 7px;
 }
 
-.ssp-aggregator-post-excerpt {
+.spfs-aggregator-post-excerpt {
   padding: 15px;
 }
 
-.ssp-aggregator-rating {
+.spfs-aggregator-rating {
   display: inline-block;
 }
 
  @media screen and (min-width: 768px) {
-  .ssp-aggregator-post-wrap {
+  .spfs-aggregator-post-wrap {
     display: inline-block;
     vertical-align: top;
     width: calc(100% / 4 - 20px);
   }
-   .ssp-aggregator-post-wrap:not( .ssp-aggregator-post-wrap-first ) {
+   .spfs-aggregator-post-wrap:not( .spfs-aggregator-post-wrap-first ) {
      margin-left: 15px;
    }
 }
 @media screen and (max-width:767px) {
-  .ssp-aggregator-post-wrap {
+  .spfs-aggregator-post-wrap {
     width: 100%;
   }
 }
