--- a/assets/css/float-menu.css
+++ b/assets/css/float-menu.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 768px) {
-	.storefront-primary-navigation.ssp-float-menu {
+	.storefront-primary-navigation.spfs-float-menu {
 		justify-content: space-between;
     left: 0;
     margin: 0;
