--- a/assets/css/sharer.css
+++ b/assets/css/sharer.css
@@ -1,99 +1,99 @@
 @media screen and ( min-width: 1280px ) {
-	.ssp-sharer {
+	.spfs-sharer {
 		left: 0;
 		margin: 0;
 		position: fixed;
 		top: 305px;
 	}
-	.ssp-sharer li {
+	.spfs-sharer li {
 		display: flex;
 		margin-bottom: 5px;
 	}
-	.ssp-sharer li a {
+	.spfs-sharer li a {
 		display: flex;
 		height: 45px;
 		justify-content: center;
 		width: 45px;
 	}
-	.ssp-sharer li a:before {
+	.spfs-sharer li a:before {
 		align-self: center;
 		font-size: 20px;
 	}
-	.ssp-sharer li a span {
+	.spfs-sharer li a span {
 		display: none;
 	}
 }
 
 @media screen and ( max-width: 1279px ) {
-	.ssp-sharer {
+	.spfs-sharer {
 		border-top: 1px solid rgba(0,0,0,.05);
     margin-left: 0;
 		margin-top: 1em;
     padding-top: 1em;
 		width: 100%;
 	}
-	.ssp-sharer li {
+	.spfs-sharer li {
 		border-radius: 5px;
 		display: inline-block;
     margin-left: 10px;
 		padding: 10px;
 	}
-  .ssp-sharer li.first {
+  .spfs-sharer li.first {
     margin-left: 0;
   }
-	.ssp-sharer li a:before {
+	.spfs-sharer li a:before {
 		font-weight: 600;
 		margin-right: 5px;
 	}
-	.ssp-sharer li a span {
+	.spfs-sharer li a span {
 		font-weight: 600;
 	}
 }
 
-.ssp-sharer li:hover {
+.spfs-sharer li:hover {
 	transition: 0.2s;
 }
 
-.ssp-sharer li a {
+.spfs-sharer li a {
 	color: #fff;
 }
 
-.ssp-sharer li a:before {
+.spfs-sharer li a:before {
 	font-family: 'FontAwesome';
 }
 
-.ssp-sharer-facebook-button {
+.spfs-sharer-facebook-button {
 	background-color: #3b5998;
 }
 
-.ssp-sharer-facebook-button:hover {
+.spfs-sharer-facebook-button:hover {
 	background-color: #355088;
 }
 
-.ssp-sharer-facebook-link:before {
+.spfs-sharer-facebook-link:before {
 	content: "\f09a";
 }
 
-.ssp-sharer-twitter-button {
+.spfs-sharer-twitter-button {
 	background-color: #55ACEE;
 }
 
-.ssp-sharer-twitter-button:hover {
+.spfs-sharer-twitter-button:hover {
 	background-color: #4c9ad6;
 }
 
-.ssp-sharer-twitter-link:before {
+.spfs-sharer-twitter-link:before {
 	content: "\f099";
 }
 
-.ssp-sharer-google\00002b-button {
+.spfs-sharer-google\00002b-button {
 	background-color: #D9432F;
 }
 
-.ssp-sharer-google\00002b-button:hover {
+.spfs-sharer-google\00002b-button:hover {
 	background-color: #c33c2a;
 }
 
-.ssp-sharer-google\00002b-link:before {
+.spfs-sharer-google\00002b-link:before {
 	content: "\f0d5";
 }
