--- a/assets/css/widget-newsletter.css
+++ b/assets/css/widget-newsletter.css
@@ -31,12 +31,19 @@
 	color: #fff;
 	display: none;
 	font-size: 15px;
-	padding: 15px;
+  height: 77px;
+	padding: 25px;
 	position: fixed;
 	text-align: center;
 	top: 0;
 	width: 100%;
 	z-index: 999;
+}
+@media screen and (max-width: 767px) {
+  #spfs-widget-newsletter-noty {
+    height: 95px;
+    padding: 35px;
+  }
 }
 #spfs-widget-newsletter-noty.spfs-widget-newsletter-noty-error {
 	background-color: #FF0000;
